# amv_decoder

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: amv.rs  bit.rs  decoder.rs  huffman.rs  idct.rs  lib.rs  main.rs
tests/: parse_sample.rs
