[package]
name = "amv_decoder"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
